# kurs3

./: README.md  main.py  pyproject.toml  utils.py
tests/: test.py  test_code.py
